--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.9",
